:zap: add db store/mock and agent api proto
