# gen/openapi/apidocs.swagger.json
@@ -21,6 +21,134 @@
     "application/json"
   ],
   "paths": {
+    "/v1/agent/payload": {
+      "post": {
+        "summary": "Send a payload",
+        "description": "Send a payload to the server",
+        "operationId": "GrillService_SendAgentPayload",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1AgentPayloadRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Agent"
+        ]
+      }
+    },
+    "/v1/agent/register": {
+      "post": {
+        "summary": "Register an agent",
+        "description": "Register an agent with the server",
+        "operationId": "GrillService_RegisterAgent",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1RegisterAgentRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Agent"
+        ]
+      }
+    },
+    "/v1/create_agent": {
+      "post": {
+        "summary": "Create Agent",
+        "description": "Create a new agent",
+        "operationId": "GrillService_CreateAgent",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateAgentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateAgentRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Agent"
+        ]
+      }
+    },
+    "/v1/get_agents": {
+      "get": {
+        "summary": "Get Agents",
+        "description": "Get all agents",
+        "operationId": "GrillService_GetAgents",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetAgentsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Agent"
+        ]
+      }
+    },
     "/v1/ping": {
       "get": {
         "summary": "Ping the server",
@@ -42,6 +170,40 @@
         },
         "tags": [
           "Ops"
+        ]
+      }
+    },
+    "/v1/toggle_agent": {
+      "post": {
+        "summary": "Toggle Agent",
+        "description": "Toggle an agent's status",
+        "operationId": "GrillService_ToggleAgent",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ToggleAgentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1ToggleAgentRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Agent"
         ]
       }
     }
@@ -75,6 +237,91 @@
         }
       }
     },
+    "v1Agent": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "active": {
+          "type": "boolean"
+        },
+        "group": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        },
+        "scopes": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "lastConnection": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "v1AgentPayloadRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string",
+          "description": "other fields..."
+        }
+      }
+    },
+    "v1AgentPayloadResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CreateAgentRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "group": {
+          "type": "string"
+        },
+        "isActive": {
+          "type": "boolean"
+        }
+      }
+    },
+    "v1CreateAgentResponse": {
+      "type": "object",
+      "properties": {
+        "agent": {
+          "$ref": "#/definitions/v1Agent"
+        }
+      }
+    },
+    "v1GetAgentsResponse": {
+      "type": "object",
+      "properties": {
+        "agents": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Agent"
+          }
+        }
+      }
+    },
     "v1PingResponse": {
       "type": "object",
       "properties": {
@@ -88,6 +335,44 @@
           "type": "string"
         },
         "buildTime": {
+          "type": "string"
+        }
+      }
+    },
+    "v1RegisterAgentRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      }
+    },
+    "v1RegisterAgentResponse": {
+      "type": "object",
+      "properties": {
+        "agentId": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        }
+      }
+    },
+    "v1ToggleAgentRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "active": {
+          "type": "boolean"
+        }
+      }
+    },
+    "v1ToggleAgentResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
           "type": "string"
         }
       }
